[ADD][API] - update participants